@@ -1,4 +1,5 @@
 0.4.2
+Added --no-autosession,-a to options to temporarily disable auto loading/saving of session.
 Fixed segfault on open hexdump.
 Auto save/restore session now disabled in safe mode ( -s ).
 Fixed displaying total number of replacements on status bar.
